# sftrace

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: CI.yml
setup/: Cargo.toml  build.rs
setup/src/: lib.rs
src/: arch.rs  events.rs  layout.rs  lib.rs  main.rs  record.rs  util.rs
src/arch/: aarch64.rs  x86_64.rs
src/tools/: analyzer.rs  bin.rs  config.rs  convert.rs  filter.rs  memory.rs  record.rs  util.rs
src/tools/convert/: chrome_trace.rs  pola.rs
