[package]
name = "sftrace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[[bin]]
name = "sftrace"

[workspace]
members = [ "setup" ]

[dependencies]
# tools
anyhow = "1"
argh = "0.1"
addr2line = "0.24"
flate2 = "1"
prost = "0.13"
micromegas-perfetto = "0.7"
rayon = "1"
siphasher = "1"

# perf
quanta = "0.12"

# xray patch
libc = "0.2"
findshlibs = "0.10"
object = "0.36"
memmap2 = "0.9"
regex = { version = "1", default-features = false, features = [ "perf", "std" ] }
glob = "0.3"

# events
zerocopy = { version = "0.8", features = [ "derive" ] }
serde = { version = "1", features = [ "derive" ] }
serde_bytes = "0.11"
cbor4ii = { version = "1", features = [ "serde1", "use_std" ] }

[profile.release]
panic = "abort"
debug = true
