[package]
name = "sftrace-setup"
version = "0.1.1"
edition = "2024"
links = "sftrace"
license = "MIT"
repository = "https://github.com/quininer/sftrace"
homepage = "https://github.com/quininer/sftrace"
documentation = "https://docs.rs/sftrace-setup"
description = "Setup helper for sftrace (instrumentation-based trace tool)"
categories = [ "development-tools::debugging", "development-tools::profiling" ]
keywords = [ "tracing", "xray" ]
